# Computer-Network-HWs

./: README.md
hw1/: README.md  output.pstats  pyproject.toml  savedrecs.txt  server.py  wsgi.py
hw1/cookies/: asd  asfdsdf  b'dd'  dd  ddd  ddf  ddfsdf  ddfsdfa  dsdf  dsfs  sad  sdfasd  sfdsf
hw1/dd/: savedrecs.txt
hw1/functions/: filelist.py  files.py  http.py  socket.py  view.py
hw1/html/: cookie.html  index.html  storage.html
