[tool.poetry]
name = "hw1"
version = "0.0.0"
description = "computer network homework 1"
authors = ["Hyungsuk Kang <hskang9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
